--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,50 @@
 html,body{
   height:100%;
+  font-family: arial, sans-serif;
 }
+
+a {
+	color: #000;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+a.search-button:hover {
+	text-decoration: none;
+}
+
+.header {
+	width: 100%;
+	height: 100px;
+	padding-top: 20px;
+	padding-left: -100px;
+}
+
+.navigation {
+	float: right;
+}
+
+ul.nav {
+	list-style: none;
+	padding-left: 15px;
+}
+
+ul.nav li {
+	float: left;
+	margin-right: 12px;
+	opacity: 0.8;
+	font-size: 14px;
+}
+
+li.top {
+	margin-top:10px;
+}
+
 .main-container {
 	width: 100%;
-}
-.header {
-    text-align: right;
-    color: #404040;
-    text-decoration: none;
-    line-height: 24px;
 }
 
 img {
@@ -25,9 +61,10 @@ img {
 
 .search_form {
      text-align: center;
-   
+ }
 
 .footer {
+	opacity: 0.8;
 	background: #f2f2f2;
     bottom: 0;
     height: 30px;
